--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= pluralize(@rooms.size, "Room") %> at The Maze Music Studios</h1>
 
 <% @rooms.each do |room| %>
-	<h3><%= link_to("Room ##{room.id}", room_path(room)) %></h3>
+	<h3><%= link_to(room_number_format(room), room_path(room)) %></h3>
 	<div>Status: <%= room.status.capitalize %></div>
 <% end %>
