Finish spec for editing a room's details

--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,1 +1,9 @@
 <h1>Editing: <%= room_number_format(@room) %></h1>
+
+<%= form_for @room do |f| %>
+	<%= f.label :occupancy_status %>
+	<%= f.select :occupancy_status, Room::OCCUPANCY_OPTIONS, prompt: "Pick one" %>
+
+	<%= f.label :availability_status %>
+	<%= f.select :availability_status, Room::AVAILABILITY_OPTIONS, prompt: "Pick one" %>
+<% end %>
