--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -8,7 +8,7 @@
 
 <p>
 	<h3>
-		Availability Status: <%= @room.status.capitalize %>
+		Availability Status: <%= @room.availability_status.capitalize %>
 	</h3>
 </p>
 
