remove helper for returning a room's occupancied attr; it is no longer needed since the attr was changed to an enum for occupancy_status

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,5 +2,5 @@
 
 <% @rooms.each do |room| %>
 	<h3><%= link_to(room_number_format(room), room_path(room)) %></h3>
-	<div>Status: <%= room.availability_status.capitalize %></div>
+	<div>Status: <%= room.availability_status %></div>
 <% end %>
