Add link to delete a room

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -13,4 +13,5 @@
 </p>
 
 <%= link_to("Back To All Rooms", rooms_path) %> |
-<%= link_to("Edit Room", edit_room_path(@room)) %>
+<%= link_to("Edit Room", edit_room_path(@room)) %> |
+<%= link_to("Delete Room", room_path(@room), method: :delete, data: { confirm: "Are you sure?" }) %>
