--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container text-center">
 <h1><%= room_number_format(@room) %></h1>
 
 <p>
@@ -15,3 +16,4 @@
 <%= link_to("Back To All Rooms", rooms_path) %> |
 <%= link_to("Edit Room", edit_room_path(@room)) %> |
 <%= link_to("Delete Room", room_path(@room), method: :delete, data: { confirm: "Are you sure?" }) %>
+</div>
