--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,19 +1,23 @@
-<div class="container text-center">
-<h1><%= room_number_format(@room) %></h1>
+<div class="container">
+	<div class="card text-center">
+  	<div class="card-header">
+			Maze Music Studios
+		</div>
 
-<p>
-	<h3>
-		Occupancy Status: <%= @room.occupancy_status %>
-	</h3>
-</p>
+		<div class="card-body">
+			<h3 class="card-title">
+				<%= room_number_format(@room) %>
+			</h3>
+			<p class="card-text">
+				<strong>Occupancy Status:</strong> <%= @room.occupancy_status %>
+			</p>
+			<p class="card-text">
+				<strong>Availability Status:</strong> <%= @room.availability_status %>
+			</p>
 
-<p>
-	<h3>
-		Availability Status: <%= @room.availability_status %>
-	</h3>
-</p>
-
-<%= link_to("Back To All Rooms", rooms_path) %> |
-<%= link_to("Edit Room", edit_room_path(@room)) %> |
-<%= link_to("Delete Room", room_path(@room), method: :delete, data: { confirm: "Are you sure?" }) %>
+			<%= link_to("Back To All Rooms", rooms_path, class: "btn btn-primary") %>
+			<%= link_to("Edit Room", edit_room_path(@room), class: "btn btn-secondary") %>
+			<%= link_to("Delete Room", room_path(@room), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger") %>
+		</div>
+	</div>
 </div>
