--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,9 @@
-<h1><%= pluralize(@rooms.size, "Room") %> at The Maze Music Studios</h1>
+<div class="container text-center mt-4 mb-4" style="width: 60rem;">
 
-<% @rooms.each do |room| %>
-	<h3><%= link_to(room_number_format(room), room_path(room)) %></h3>
-	<div>Status: <%= room.availability_status %></div>
-<% end %>
+	<div class="list-group shadow">
+		<li class="list-group-item active"><strong>Welcome To The Maze Music Studios</strong></li>
+		<% @rooms.each do |room| %>
+			<%= link_to(content_tag(:strong, room_number_format(room)), room_path(room), class: "list-group-item list-group-item-action") %>
+		<% end %>
+	</div>
+</div>
