--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,10 @@
-<h2>Sign up</h2>
 
+<div class="card" id="user-signup">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+<div class="card-body">
+<h2>Sign up</h2>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -27,3 +29,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+<div>
+<div>
