--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
+        <li class="nav-item">
+          <%= link_to("Sign Up", new_user_registration_path, class: "nav-link") %>
+        </li>
       </ul>
     </div>
   </div>
